crates/unblock-cli/tests/snapshots/help_snapshots__help_version.snap
---
source: crates/unblock-cli/tests/help_snapshots.rs
expression: "help(&[\"version\", \"--help\"])"
---
Print version / build metadata (no workspace, no network)

Usage: unblock version [OPTIONS]

Options:
      --dir <DIR>        The explicit workspace `.unblock/` directory (no walk-up; `--dir` > `UNBLOCK_DIR`, MF-2) [env: UNBLOCK_DIR=]
      --short            Print only the bare package version (no build metadata)
      --actor <ACTOR>    The actor override (`--actor` > `UNBLOCK_ACTOR`, FORK-4) [env: UNBLOCK_ACTOR=]
  -o, --output <FORMAT>  The output format for rendered reports (`json|robot|plain|csv|markdown`). NO clap `env` — `UNBLOCK_OUTPUT_FORMAT` is owned by config's strict env layer for workspace commands; the flag still forwards so `--flag > env` holds (spine §5b)
  -v, --verbose...       Increase verbosity (`-v` INFO, `-vv` DEBUG, `-vvv+` TRACE). Logs go to stderr only (NFR-14)
  -q, --quiet            Suppress all but error-level diagnostics (`-q`). Overrides `-v`
  -h, --help             Print help
